# WebServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
base/: threadpool.h  util.cpp  util.h
http/: common.h  http.cpp  http.h
resources/: index.html
resources/error/: 400.html  403.html  404.html  501.html
resources/snake/: game.js  index.html  style.css
src/http/: http_connect.cpp  http_connect.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h
src/log/: block_queue.h  log.cpp  log.h
src/socket/: epoller.h  server.cpp  server.h
src/timer/: heap_timer.cpp  heap_timer.h  heaptimer.cpp  heaptimer.h
src/utils/: buffer.cpp  buffer.h  thread_pool.h  threadpool.h
